// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table applies responsive stacked table 1`] = `
<table
  class="ds-c-table ds-c-lg-table--stacked"
  role="table"
>
  <caption
    class="ds-c-table__caption"
  >
    A great caption
  </caption>
</table>
`;

exports[`Table applies scrollable prop to table 1`] = `
<div
  aria-labelledby="caption-8"
  aria-live="polite"
  aria-relevant="additions"
  class="ds-c-table__wrapper"
  role="region"
>
  <table
    class="ds-c-table"
    role="table"
  >
    <caption
      class="ds-c-table__caption"
      id="caption-8"
    >
      A great caption
    </caption>
  </table>
</div>
`;
